--- a/src/main/resources/static/css/signUp.css
+++ b/src/main/resources/static/css/signUp.css
@@ -1,18 +1,18 @@
 body {
-     margin: 0;
-     padding: 0;
-     font-family: initial, 'Cursive';
-     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0, 0, 0.7)), url(/images/library.jpeg);
-     height: 100vh;
-     overflow: hidden;
- }
+    margin: 0;
+    padding: 0;
+    font-family: initial, 'Cursive';
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0, 0, 0.7)), url(/images/signUp1.jpg);
+    height: 100vh;
+    overflow: hidden;
+}
 .center {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 440px;
-    height: 365px;
+    width: 500px;
+    height: 630px;
     background: white;
     border-radius: 10px;
 }
@@ -27,11 +27,10 @@ body {
     padding: 0 40px;
     box-sizing: border-box;
 }
-
 form .txt_field {
     position: relative;
     border-bottom: 2px solid #adadad;
-    margin: 30px 0;
+    margin: 15px 0;
 }
 
 .txt_field input{
@@ -51,24 +50,11 @@ input[type="submit"]{
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
-    font-weight: 700;
+    font-weight: 699;
     cursor: pointer;
     outline: none;
 }
 input[type="submit"]:hover {
     border-color: #2691d9;
     transition: .5s;
-}
-.signup_link {
-    margin: 30px 0;
-    text-align: center;
-    font-size: 16px;
-    color: black;
-}
-.signup_link a{
-    color: #2691d9;
-    text-decoration: none;
-}
-.signup_link a:hover{
-    text-decoration: underline;
 }
